[package]
name = "tele"
version = "0.1.0"
authors = ["joseph <barrjoeym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tui = "0.14"
termion = "1.5"
rtdlib = { version = "1.6.*", features = ["sys"] }
json = "*"
crossbeam= "*"
